* Prevent the slideshow in the header from jumping after it is loaded.

--- a/css/onato.css
+++ b/css/onato.css
@@ -4,6 +4,10 @@
 {% include css/style.css %}
 {% include css/syntax.css %}
 
+#header .slideshow{
+  min-height: 607px;
+}
+
 #logo {
   float:inherit;
   width:200px;
